SET(JSGROK_BIN jsgrok)

IF(WIN32)
  ADD_DEFINITIONS("/wd4251")
ENDIF()

IF(UNIX)
  SET(CMAKE_CXX_FLAGS "-std=c++0x")
ENDIF()

IF(APPLE)
  SET(CMAKE_CXX_FLAGS "-std=c++11 -Wc++11-extensions -DU_DISABLE_RENAMING=1")

  FIND_LIBRARY(COREFOUNDATION_LIBRARY NAMES CoreFoundation)
  MARK_AS_ADVANCED (COREFOUNDATION_LIBRARY)
ENDIF()

SET(V8_BUILD_DIR "/home/kandie/Downloads/AUR/v8/src/v8/out.gn/x64.release")

ADD_EXECUTABLE(${JSGROK_BIN} ${JSGROK_SOURCES} main.cpp)
ADD_DEPENDENCIES(jsgrok jsgrok-ql)

TARGET_LINK_LIBRARIES(${JSGROK_BIN} ${JSGROK_LIBRARIES})

IF(APPLE)
  TARGET_LINK_LIBRARIES(${JSGROK_BIN} ${COREFOUNDATION_LIBRARY})
ENDIF()

ADD_CUSTOM_COMMAND(TARGET jsgrok
  POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy_directory
    ${CMAKE_SOURCE_DIR}/runtime
    $<TARGET_FILE_DIR:jsgrok>
)
