SET(JSGREP_BIN jsgrep)

IF(WIN32)
  ADD_DEFINITIONS("/wd4251")
ENDIF()

IF(UNIX)
  SET(CMAKE_CXX_FLAGS "-std=c++0x")
ENDIF()

IF(APPLE)
  SET(CMAKE_CXX_FLAGS "-std=c++11 -Wc++11-extensions -DU_DISABLE_RENAMING=1")
ENDIF()

ADD_EXECUTABLE(${JSGREP_BIN} ${JSGREP_SOURCES} main.cpp)
ADD_DEPENDENCIES(jsgrep jsgrep-ql)

TARGET_LINK_LIBRARIES(${JSGREP_BIN} ${JSGREP_LIBRARIES})
